[project]
name = "sih2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deep-translator>=1.11.4",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.116.1",
    "indic-transliteration>=2.3.75",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.0.10",
    "langdetect>=1.0.9",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "transformers>=4.56.1",
    "twilio>=9.8.0",
    "uvicorn>=0.35.0",
]
